--- a/css/style.scss
+++ b/css/style.scss
@@ -136,7 +136,7 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-    text-decoration: none;
+    text-decoration: underline;
 
     &:hover {
         border-bottom: 1px dotted;
