--- a/css/style.scss
+++ b/css/style.scss
@@ -138,6 +138,8 @@ h1, h2, h3, h4, h5, h6 {
  */
 a {
     text-decoration: none;
+    font-weight: 600;
+    
     &:hover {
         border-bottom: 1px dotted;
     }
