--- a/css/style.scss
+++ b/css/style.scss
@@ -140,7 +140,7 @@ h1, h2, h3, h4, h5, h6 {
 a {
     text-decoration: none;
     font-weight: 500;
-    
+    color: #a61717;
     &:hover {
         border-bottom: 1px dotted;
     }
@@ -340,6 +340,7 @@ pre {
   text-transform: capitalize;
   font-weight: 500;
   margin-top: 1em;
+  color: #a61717;
 }
 .site-description {
   font-size: 14px;
