--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,15 @@
 <center>  {{site.description}} </center>
 </div>
 <div class="wrapper">
+  <ul class="wrapper contact">
+    <li><a href="https://www.snapchat.com/add/marcopchen">Snapchat</a></li>
+    <li><a href="https://www.instagram.com/marcopchen/">Instagram</a></li>
+    <li><a href="https://www.linkedin.com/in/marcopchen/">LinkedIn</a></li>
+    <li><a href="https://github.com/marcopchen/">GitHub</a></li>
+    <li><a href="mailto:marcopchen@gmail.com">E-mail</a> </li>
+  <ul>
+</div>
+<div class="wrapper">
   <div class="trigger site-navigation">
     <a class="page-link" href="{{site.url}}">HOME</a>
 
