--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 <center>  {{site.description}} </center>
 </div>
 <div class="wrapper">
-  <ul class="wrapper contact">
+  <ul class="contact">
     <li><a href="https://www.snapchat.com/add/marcopchen">Snapchat</a></li>
     <li><a href="https://www.instagram.com/marcopchen/">Instagram</a></li>
     <li><a href="https://www.linkedin.com/in/marcopchen/">LinkedIn</a></li>
