--- a/css/style.scss
+++ b/css/style.scss
@@ -327,6 +327,10 @@ pre {
  */
 .contact li {
   display: inline;
+  float: inherit;
+}
+a {
+    display: block;
 }
 .site-header {
   border-top: 5px solid;
