--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,13 +6,16 @@
 <center>  {{site.description}} </center>
 </div>
 <div class="wrapper">
-  <ul class="contact">
+  <div class="trigger site-navigation">
+  <center>
+  <ul>
     <li><a href="https://www.snapchat.com/add/marcopchen">Snapchat</a></li>
     <li><a href="https://www.instagram.com/marcopchen/">Instagram</a></li>
     <li><a href="https://www.linkedin.com/in/marcopchen/">LinkedIn</a></li>
     <li><a href="https://github.com/marcopchen/">GitHub</a></li>
     <li><a href="mailto:marcopchen@gmail.com">E-mail</a> </li>
   <ul>
+  </center>
 </div>
 <div class="wrapper">
   <div class="trigger site-navigation">
