--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,11 +5,11 @@
 <div class="wrapper site-description">
 <center>  {{site.description}} </center>
 </div>
-<div class="wrapper">
-  <div class="trigger site-navigation">
+<div>
+  <div>
   <center>
   <ul>
-    <li><a href="https://www.snapchat.com/add/marcopchen">Snapchat</a></li>
+    <li s><a href="https://www.snapchat.com/add/marcopchen">Snapchat</a></li>
     <li><a href="https://www.instagram.com/marcopchen/">Instagram</a></li>
     <li><a href="https://www.linkedin.com/in/marcopchen/">LinkedIn</a></li>
     <li><a href="https://github.com/marcopchen/">GitHub</a></li>
