--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,8 @@
 <div class="wrapper site-description">
 <center>  {{site.description}} </center>
 </div>
-<div>
-  <div>
+<div class="wrapper">
+  <div class="trigger site-navigation">
   <center>
   <ul>
     <li s><a href="https://www.snapchat.com/add/marcopchen">Snapchat</a></li>
@@ -16,6 +16,7 @@
     <li><a href="mailto:marcopchen@gmail.com">E-mail</a> </li>
   <ul>
   </center>
+  </div>
 </div>
 <div class="wrapper">
   <div class="trigger site-navigation">
