--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,10 +8,10 @@
 <div id="contact">
   <center>
   <ul>
-    <li s><a href="https://www.snapchat.com/add/marcopchen">Snapchat</a></li>
-    <li><a href="https://www.instagram.com/marcopchen/">Instagram</a></li>
-    <li><a href="https://www.linkedin.com/in/marcopchen/">LinkedIn</a></li>
-    <li><a href="https://github.com/marcopchen/">GitHub</a></li>
+    <li s><a href="https://www.snapchat.com/add/marcopchen">Snapchat |</a></li>
+    <li><a href="https://www.instagram.com/marcopchen/">Instagram |</a></li>
+    <li><a href="https://www.linkedin.com/in/marcopchen/">LinkedIn |</a></li>
+    <li><a href="https://github.com/marcopchen/">GitHub |</a></li>
     <li><a href="mailto:marcopchen@gmail.com">E-mail</a> </li>
   <ul>
   </center>
