--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,8 @@
   <ul>
     <li s><a href="https://www.snapchat.com/add/marcopchen">Snapchat |</a></li>
     <li><a href="https://www.instagram.com/marcopchen/">Instagram |</a></li>
-    <li><a href="https://www.linkedin.com/in/marcopchen/">LinkedIn |</a></li>
+    <li><a href="https://www.instagram.com/marcopchen/">YouTube |</a></li>
+    <li><a href="https://www.youtube.com/marcopchen">LinkedIn |</a></li>
     <li><a href="https://github.com/marcopchen/">GitHub |</a></li>
     <li><a href="mailto:marcopchen@gmail.com">E-mail</a> </li>
   <ul>
