--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,12 +8,18 @@
 <div id="contact">
   <center>
   <ul>
-    <li><a href="https://www.snapchat.com/add/marcopchen">Snapchat</a> |</li>
-    <li><a href="https://www.instagram.com/marcopchen/">Instagram</a> |</li>
-    <li><a href="https://www.youtube.com/marcopchen">YouTube</a> |</li>
-    <li><a href="https://www.linkedin.com/in/marcopchen/">LinkedIn</a> |</li>
-    <li><a href="https://github.com/marcopchen/">GitHub</a> |</li>
-    <li><a href="mailto:marcopchen@gmail.com">E-mail</a></li>
+    <li><a href="https://www.snapchat.com/add/marcopchen"><i class="fa fa-snapchat-square" aria-hidden="true"></i>
+</a></li>
+    <li><a href="https://www.instagram.com/marcopchen/"><i class="fa fa-instagram" aria-hidden="true"></i>
+</a></li>
+    <li><a href="https://www.youtube.com/marcopchen"><i class="fa fa-youtube-play" aria-hidden="true"></i>
+</a></li>
+    <li><a href="https://www.linkedin.com/in/marcopchen/"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
+</a></li>
+    <li><a href="https://github.com/marcopchen/"><i class="fa fa-github" aria-hidden="true"></i>
+</a></li>
+    <li><a href="mailto:marcopchen@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i>
+</a></li>
   <ul>
   </center>
 </div>
