--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,11 +8,11 @@
 <div id="contact">
   <center>
   <ul>
-    <li><a href="https://www.snapchat.com/add/marcopchen"><i class="fa fa-snapchat-ghost" aria-hidden="true"></i></a>  </li>
-    <li><a href="https://www.instagram.com/marcopchen/"><i class="fa fa-instagram" aria-hidden="true"></i></a>  </li>
-    <li><a href="https://www.youtube.com/marcopchen"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>  </li>
-    <li><a href="https://www.linkedin.com/in/marcopchen/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>  </li>
-    <li><a href="https://github.com/marcopchen/"><i class="fa fa-github" aria-hidden="true"></i></a> |</li>
+    <li><a href="https://www.instagram.com/marcopchen/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+    <li><a href="https://www.snapchat.com/add/marcopchen"><i class="fa fa-snapchat" aria-hidden="true"></i></i></a></li>
+    <li><a href="https://www.youtube.com/marcopchen"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+    <li><a href="https://www.linkedin.com/in/marcopchen/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+    <li><a href="https://github.com/marcopchen/"><i class="fa fa-github" aria-hidden="true"></i></a></li>
     <li><a href="mailto:marcopchen@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
   <ul>
   </center>
