--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="wrapper">
   <center> <div class="site-title">   {{site.title}} </div></center>
