--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
   <ul>
     <li><a href="https://www.snapchat.com/add/marcopchen"><i class="fa fa-camera" aria-hidden="true"></i></a></li>
     <li><a href="https://www.snapchat.com/add/marcopchen" class="fa fa-twitter"></a></li>
-    <li><a href="https://www.instagram.com/marcopchen/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+    <li><a href="https://www.instagram.com/marcopchen/" class="fa fa-instagram"></a></li>
     <li><a href="https://www.youtube.com/marcopchen"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
     <li><a href="https://www.linkedin.com/in/marcopchen/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
     <li><a href="https://github.com/marcopchen/"><i class="fa fa-github" aria-hidden="true"></i></a></li>
