--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
   <ul>
     <li><a href="https://www.snapchat.com/add/marcopchen" class="fa fa-snapchat"></a></li>
     <li><a href="https://www.instagram.com/marcopchen/" class="fa fa-instagram"></a></li>
-    <li><a href="https://www.youtube.com/marcopchen" class="fa fa-youtube-play"></a></li>
+    <li><a href="https://www.youtube.com/marcopchen" class="fa fa-youtube"></a></li>
     <li><a href="https://www.linkedin.com/in/marcopchen/" class="fa fa-linkedin-square"></a></li>
     <li><a href="https://github.com/marcopchen/" class="fa fa-github"></a></li>
   <ul>
