--- a/css/style.scss
+++ b/css/style.scss
@@ -331,9 +331,6 @@ pre {
   font-size: 1.75em;
 }
 .fa {
-  padding: 10px;
-  font-size: 30px;
-  width: 25px;
   text-align: center;
   text-decoration: none;
   border-radius: 50%;
@@ -358,17 +355,21 @@ pre {
   background: #ff0000;
   color: white;
 }
+.fa-youtube {
+  background: #ff0000;
+  color: white;
+}
 .fa-linkedin-square {
+  background: #007bb5;
+  color: white;
+}
+.fa-linkedin {
   background: #007bb5;
   color: white;
 }
 .fa-github {
   background: #000000;
   color: white;
-}
-.fa:hover {
-  transition: 0.5s;
-  transform: rotateY(360deg);
 }
 .site-header {
   border-top: 5px solid;
