--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,8 @@
 <div class="wrapper site-description">
 <center>  {{site.description}} </center>
 </div>
-<div>
+<br>
+<div id="media">
   <center>
   <ul>
     <li><a href="https://www.snapchat.com/add/marcopchen" class="fa fa-snapchat"></a></li>
