--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,8 @@
 <footer class="site-footer">
 
   <div class="wrapper">
-
     <h2 class="footer-heading small-site-title">{{ site.title }}</h2>
-
+    <h6>Yes, that's my actual name.</h6>
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list footer-content">
