--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,15 +2,15 @@
 
   <form action="https://formspree.io/marcopchen@gmail.com" method="POST">
     <div>
-      <label class="col-md-4 control-label" for="name">Name:</label>
+      <label class="col-md-4 control-label" for="name">Name:</label><br>
       <input class="form-control input-md" type="text" id="name" name="name">
     </div>
     <div>
-      <label class="col-md-4 control-label" for="mail">E-mail:</label>
+      <label class="col-md-4 control-label" for="mail">E-mail:</label><br>
       <input class="form-control input-md" type="email" id="email" name="_replyto">
     </div>
     <div>
-      <label class="col-md-4 control-label" for="msg">Message:</label>
+      <label class="col-md-4 control-label" for="msg">Message:</label><br>
       <textarea class="form-control" id="msg" name="user_message"></textarea>
     </div>
     <input class="btn btn-primary btn-adjust" type="submit" value="Send">
