--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -11,7 +11,7 @@
     </div>
     <div>
       <label class="col-md-4 control-label" for="msg">Message:</label><br>
-      <textarea class="form-control" id="msg" name="user_message"></textarea>
+      <textarea class="form-control input-md" id="msg" name="user_message"></textarea>
     </div>
     <input class="btn btn-primary btn-adjust" type="submit" value="Send">
   </form>
