--- a/css/style.scss
+++ b/css/style.scss
@@ -141,16 +141,20 @@ a {
     text-decoration: none;
     font-weight: 500;
     &:hover {
-        border-bottom: 1px dotted #111111;
+        border-bottom: 1px dotted;
+        border-color: #111111;
     }
     &.page-link:hover {
-        border-bottom: 1px dotted #111111;
+        border-bottom: 1px dotted;
+        border-color: #111111;
     }
     &.postLink:hover{
-        border-bottom: 1px dotted #111111;
+        border-bottom: 1px dotted;
+        border-color: #111111;
     }
     &.post-title-link:hover{
-        border-bottom: 1px dotted #111111 !important;
+        border-bottom: 1px dotted !important;
+        border-color: #111111;
     }
 }
 
