--- a/css/style.scss
+++ b/css/style.scss
@@ -370,7 +370,7 @@ pre {
   text-indent: 6px;
   font-family: 'Josefin Sans';
   font-weight: 300;
-  padding-top: 2.5em;
+  padding-top: 2em;
 }
 .page-title {
   text-transform: uppercase;
@@ -462,7 +462,7 @@ pre {
 }
 .footer-col {
   float: left;
-  margin-bottom: $spacing-unit / 2;
+  margin-bottom: 0;
   padding-left: $spacing-unit / 2;
 }
 .footer-col-1 {
