--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer">
+<footer>
 <h2 class="footer-heading small-site-title">{{ site.title }}</h2>
   <div class="wrapper">
   <ul class="contact-list footer-content">
