--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,22 @@
-<footer>
-<h2 class="footer-heading small-site-title">{{ site.title }}</h2>
+<footer class="site-footer">
+
   <div class="wrapper">
-  <ul class="contact-list footer-content">
-    <li>Powered by <a href="http://github.com/hemangsk/Gravity">Gravity</a> and <a href="http://jekyllrb.com"><span>Jekyll</a></span></li>
-  </ul>
+    <h2 class="footer-heading small-site-title">{{ site.title }}</h2>
+    <div class="footer-col-wrapper">
+      <div class="footer-col footer-col-1">
+        <ul class="contact-list footer-content">
+          <li>Powered by <a href="http://github.com/hemangsk/Gravity">Gravity</a> and <a href="http://jekyllrb.com"><span>Jekyll</a></span></li>
+        </ul>
+      </div>
+
+      <div class="footer-col footer-col-2 footer-content">
+      </div>
+
+      <div class="footer-col footer-col-3 site-description">
+        <p>{{  }}</p>
+      </div>
+    </div>
+
+  </div>
+
 </footer>
