--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,9 @@
   <ul>
   </center>
 </div>
+<div class="wrapper site-description">
+<center>find me elsewhere above</center>
+</div>
 <div class="wrapper">
   <div class="trigger site-navigation">
     <a class="page-link" href="{{site.url}}">HOME</a>
