--- a/css/style.scss
+++ b/css/style.scss
@@ -333,6 +333,10 @@ pre {
   font-size: 2em;
   width: 1.25em;
 }
+#media li {
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
 .fa {
   text-align: center;
   text-decoration: none;
