--- a/css/style.scss
+++ b/css/style.scss
@@ -333,7 +333,7 @@ pre {
   font-size: 2em;
   width: 1.25em;
 }
-#media li {
+#media {
   margin-bottom: 0;
   padding-bottom: 0;
 }
@@ -362,6 +362,8 @@ pre {
   letter-spacing: 2px;
   text-indent: 6px;
   font-family: 'Josefin Sans';
+  margin-top: 0;
+  padding-top: 0;
 }
 .exclamationMark {
   padding-left: 2em;
