--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,8 +14,8 @@
   <ul>
   </center>
 </div>
-<div class="wrapper site-description">
-<center>find me elsewhere above</center>
+<div class="wrapper">
+<center><h5>~find me elsewhere~</h5></center>
 </div>
 <div class="wrapper">
   <div class="trigger site-navigation">
