--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,10 +12,7 @@
     <li><a href="https://www.linkedin.com/in/marcopchen/" class="fa fa-linkedin-square"></a></li>
     <li><a href="https://github.com/marcopchen/" class="fa fa-github"></a></li>
   <ul>
-  </center>
-</div>
-<div class="wrapper">
-<center><h5>~find me elsewhere~</h5></center>
+  <div class="site-description">~find me elsewhere~</div>
 </div>
 <div class="wrapper">
   <div class="trigger site-navigation">
