--- a/css/style.scss
+++ b/css/style.scss
@@ -260,7 +260,7 @@ pre {
   padding-top: 0;
 }
 .home{
-  padding-bottom: 5em;
+  padding-bottom: 2.5em;
 }
 .download {
   padding: 10px;
@@ -355,7 +355,7 @@ pre {
   text-transform: capitalize;
   font-weight: 500;
   margin-top: 0.5em;
-  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 .site-description {
   font-size: 14px;
