--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
     <li><a href="https://www.linkedin.com/in/marcopchen/" class="fa fa-linkedin-square"></a></li>
     <li><a href="https://github.com/marcopchen/" class="fa fa-github"></a></li>
   <ul>
-  <div class="site-description">~find me elsewhere~</div>
+  <div class="site-description">find me elsewhere</div>
 </div>
 <div class="wrapper">
   <div class="trigger site-navigation">
