--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,13 +16,10 @@
 </div>
 <div class="wrapper">
   <div class="trigger site-navigation">
-    <a class="page-link" href="{{site.url}}">HOME</a>
+    <a class="page-link" href="https://marcopchen.github.io/">HOME</a>
+    <a class="page-link" href="https://marcopchen.github.io/blog/">BLOG</a>
+    <a class="page-link" href="https://marcopchen.github.io/resources/">RESOURCES</a>
+    <a class="page-link" href="https://marcopchen.github.io/contact/">CONTACT</a>
 
-    {% for sitePage in site.pages %}
-    {% if sitePage.title %}
-
-    <span class="exclamationMark">/</span><a class="page-link" href="{{sitePage.url | prepend: site.baseurl }}">{{sitePage.title}}</a>
-    {% endif %}
-    {% endfor %}
   </div>
 </div>
