--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
 
   <div class="wrapper">
-    <h2 class="footer-heading small-site-title">Marco P. Chen</h2>
+    <h2 class="footer-heading small-site-title">Marco Poetry Chen</h2>
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list footer-content">
