--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
   <center> <div class="site-title">Marco Poetry Chen</div></center>
 </div>
 <div id="media">
-  <center>
+
   <ul>
     <li><a href="https://www.snapchat.com/add/marcopchen" class="fa fa-snapchat"></a></li>
     <li><a href="https://www.instagram.com/marcopchen/" class="fa fa-instagram"></a></li>
@@ -15,10 +15,12 @@
   <div class="site-description">find me elsewhere</div>
 </div>
 <div class="wrapper">
+  <center>
   <div class="trigger site-navigation">
     <a class="page-link" href="https://marcopchen.github.io/">HOME</a>
     <span class="exclamationMark">/</span><a class="page-link" href="https://marcopchen.github.io/blog/">BLOG</a>
     <span class="exclamationMark">/</span><a class="page-link" href="https://marcopchen.github.io/resources/">RESOURCES</a>
     <span class="exclamationMark">/</span><a class="page-link" href="https://marcopchen.github.io/contact/">CONTACT</a>
   </div>
+  </center>
 </div>
