--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="wrapper">
-  <center> <div class="site-title">Marco Poetry Chen</div></center>
+  <center><div class="site-title">Marco Poetry Chen</div></center>
 </div>
 <div id="media">
-
+  <center>
   <ul>
     <li><a href="https://www.snapchat.com/add/marcopchen" class="fa fa-snapchat"></a></li>
     <li><a href="https://www.instagram.com/marcopchen/" class="fa fa-instagram"></a></li>
@@ -13,6 +13,7 @@
     <li><a href="https://github.com/marcopchen/" class="fa fa-github"></a></li>
   <ul>
   <div class="site-description">find me elsewhere</div>
+  </center>
 </div>
 <div class="wrapper">
   <center>
