--- a/css/style.scss
+++ b/css/style.scss
@@ -341,6 +341,9 @@ pre {
   text-align: center;
   text-decoration: none;
 }
+.fa hover{
+  text-decoration: none;
+}
 .site-header {
   border-top: 5px solid;
   border-bottom: 1px solid;
