--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,6 +20,7 @@
   <div class="trigger site-navigation">
     <a class="page-link" href="https://marcopchen.github.io/">HOME</a>
     <span class="exclamationMark">/</span><a class="page-link" href="https://marcopchen.github.io/blog/">BLOG</a>
+    <span class="exclamationMark">/</span><a class="page-link" href="https://marcopchen.github.io/portfolio/">PORTFOLIO</a>
     <span class="exclamationMark">/</span><a class="page-link" href="https://marcopchen.github.io/resources/">RESOURCES</a>
     <span class="exclamationMark">/</span><a class="page-link" href="https://marcopchen.github.io/contact/">CONTACT</a>
   </div>
